--- a/src/app/components/sidenav-submenu/sidenav-submenu.component.html
+++ b/src/app/components/sidenav-submenu/sidenav-submenu.component.html
@@ -1,29 +1,33 @@
 <ul nz-menu [nzTheme]="theme" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-
   <li nz-submenu nzOpen nzTitle="Personalize" nzIcon="edit">
-
     <ul>
       <li nz-menu-item nzMatchRouter>
-        <a routerLink="profile"><i nz-icon nzType="profile" nzTheme="fill"></i> Profile
+        <a routerLink="profile"
+          ><i nz-icon nzType="profile" nzTheme="fill"></i> Profile
         </a>
       </li>
       <li nz-menu-item nzMatchRouter>
-        <a routerLink="settings"><i nz-icon nzType="setting" nzTheme="fill"></i> Settings
+        <a routerLink="settings"
+          ><i nz-icon nzType="setting" nzTheme="fill"></i> Settings
         </a>
       </li>
     </ul>
   </li>
 
   <li nz-submenu nzOpen nzTitle="Groups" nzIcon="edit">
-
     <ul>
       <li nz-menu-item nzMatchRouter *ngFor="let item of this.db.navigation">
-        <a [routerLink]="item.routeURL"><i nz-icon [nzType]="item.icon" nzTheme="fill"></i>
-          {{ item.title.length > 14 ? item.title.substr(0, 14) + '...' : item.title }}
+        <a
+          [routerLink]="item.routeURL"
+          (click)="navigation.changeNavigation(item);"
+          ><i nz-icon [nzType]="item.icon" nzTheme="fill"></i>
+          {{
+            item.title.length > 14
+              ? item.title.substr(0, 14) + "..."
+              : item.title
+          }}
         </a>
       </li>
     </ul>
-
   </li>
-
 </ul>
