--- a/src/app/components/extent-module-control/extent-module-control.component.html
+++ b/src/app/components/extent-module-control/extent-module-control.component.html
@@ -1,16 +1,6 @@
-<button nz-button nz-dropdown nzShape="circle" nzType="link" nzSize="large"
-        [nzDropdownMenu]="groupAction">More options <i nz-icon nzType="down"></i>
+<button nz-button nzShape="circle" nzType="link" nzSize="large" (click)="isDeleteModalVisible = true">
+  <i nz-icon nzType="delete" nzTheme="twotone"></i>
 </button>
-<nz-dropdown-menu #groupAction="nzDropdownMenu">
-  <ul nz-menu>
-    <li nz-menu-item>
-      <a (click)="isDeleteModalVisible = true"><i nz-icon nzType="delete" nzTheme="outline"></i> Delete</a>
-    </li>
-    <li nz-menu-item>
-      <a (click)="isEditModalVisible = true; newName = name;"><i nz-icon nzType="edit" nzTheme="outline"></i> Change name</a>
-    </li>
-  </ul>
-</nz-dropdown-menu>
 
 <nz-modal
   [(nzVisible)]="isDeleteModalVisible"
@@ -35,37 +25,5 @@
     [nzLoading]="isLoading"
   >
     Remove
-  </button>
-</ng-template>
-
-<!-- Edit modal -->
-<nz-modal
-  [(nzVisible)]="isEditModalVisible"
-  nzTitle="Change information"
-  [nzFooter]="editModalFooter"
-  (nzOnCancel)="handleEditModalCancel()"
->
-  <div style="text-align: center" *ngIf="isSuccess">
-    <img src="../../../assets/checkanimation.gif" style="height: 150px;">
-  </div>
-  <div *ngIf="!isSuccess">
-    <div style="margin-bottom: 10px;">
-    <h4>Name</h4>
-    <input nz-input placeholder="Type here ..." [(ngModel)]="newName"/>
-  </div>
-    <nz-alert *ngIf="errorMessage.length > 0" nzType="error" (nzOnClose)="errorMessage = ''" nzCloseable
-              [nzMessage]="errorMessage"></nz-alert>
-  </div>
-</nz-modal>
-
-<ng-template #editModalFooter>
-  <button nz-button nzType="default" (click)="handleEditModalCancel()">Cancel</button>
-  <button
-    nz-button
-    nzType="primary"
-    (click)="handleEditModalOk()"
-    [nzLoading]="isLoading"
-  >
-    Submit change
   </button>
 </ng-template>
