--- a/src/app/group-edit-form/group-edit-form.component.html
+++ b/src/app/group-edit-form/group-edit-form.component.html
@@ -3,7 +3,7 @@
 >
   <button
     *ngIf="!isActive"
-    style="font-size: 26px; font-weight: bold; text-align: center; height: 100%;"
+    style="font-size: 26px; font-weight: bold; text-align: center; height: 100%; background-color: transparent;"
     [ngStyle]="{ color: settings.isDark ? '#fff' : '#000' }"
     nz-button
     (mouseover)="isHover = true"
@@ -16,15 +16,15 @@
     <i nz-icon [nzType]="navigationService.icon"></i>
     {{ navigationService.title }}
   </button>
-  <nz-input-group *ngIf="isActive" style="text-align: center; height: 100%;">
-    <input
-      #textbox
-      style="font-size: 26px; font-weight: bold; text-align: center; height: 100%; border-radius: 4px;"
-      (focusout)="isActive = false; confirmEditAction()"
-      (keyup.enter)="isActive = false; confirmEditAction()"
-      nz-input
-      [(ngModel)]="newTitleInput"
-      placeholder="New group title goes here ..."
+  <nz-input-group *ngIf="isActive"
+                  style="text-align: center; height: 100%;">
+    <input #textbox
+           (focusout)="isActive = false; confirmEditAction()"
+           style="font-size: 26px; font-weight: bold; text-align: center; height: 100%; border-radius: 4px; background-color: transparent;"
+           (keyup.enter)="isActive = false; confirmEditAction()"
+           nz-input
+           [(ngModel)]="newTitleInput"
+           placeholder="New group title goes here ..."
     />
   </nz-input-group>
 </div>
