remove debug.log

--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -1,10 +1,8 @@
 <nz-row>
   <canvas style="font-weight: lighter;" baseChart width="75vh" height="50vh" [datasets]="localTemperatures"
-          [labels]="temperatureTimeline"
-          chartType="line"></canvas>
+    [labels]="temperatureTimeline" chartType="line"></canvas>
 </nz-row>
 <nz-row>
   <canvas style="font-weight: lighter;" baseChart width="75vh" height="50vh" [datasets]="localHumidity"
-          [labels]="humidityTimeline"
-          chartType="line"></canvas>
+    [labels]="humidityTimeline" chartType="line"></canvas>
 </nz-row>
